# Intel-Realsense-3D-Point-Clouds

./: README.md
EdgeDetector/edgedetector_test/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/helloworld_shared/: CMakeLists.txt
HelloWorld/helloworld_shared/include/: helloworld.h
HelloWorld/helloworld_shared/src/: helloworld.cpp
HelloWorld/helloworld_test/: CMakeLists.txt  main.cpp
PointCloudBenchmark/: CMakeLists.txt  benchmark_results. csv  benchmark_results.csv  main.cpp
PointCloudBuffer/: CMakeLists.txt  main.cpp
PointCloudPeterSave/: CMakeLists.txt  main.cpp
get_intrinsics/: CMakeLists.txt  main.cpp
